[gd_scene load_steps=6 format=3 uid="uid://f2pdq5oe6ayi"]

[ext_resource type="Script" uid="uid://bfhrxwd4q7l21" path="res://Scripts/mirror.gd" id="1_h3i6c"]
[ext_resource type="Texture2D" uid="uid://db2xcyne23p7q" path="res://Assets/mirror_down1.png" id="2_h3i6c"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h3i6c"]
radius = 3.0
height = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h3i6c"]
size = Vector2(6, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16kbh"]
size = Vector2(6, 4)

[node name="RigidBody2D" type="RigidBody2D"]
z_index = 2
collision_layer = 16
collision_mask = 2
gravity_scale = 0.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_h3i6c")

[node name="RayRotater" type="Node2D" parent="."]
position = Vector2(0, 2)

[node name="RayCast2D" type="RayCast2D" parent="RayRotater"]
position = Vector2(0, 10.000001)
scale = Vector2(1.7197723, 0.4027824)
target_position = Vector2(2.7704486e-06, 240.82481)
collision_mask = 66

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_h3i6c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_h3i6c")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 18

[node name="Hitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_h3i6c")
disabled = true

[node name="PlayerPusher" type="Area2D" parent="."]
collision_layer = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPusher"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_16kbh")

[connection signal="tree_exiting" from="." to="." method="disable_mirrored_object"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
